data/derived/fa15/progs/unify/prog0554.ml.out
Characters 25-26:
  let _ = lastListElement [1; 2; 3;];;
                           ^
Error: This expression has type int but an expression was expected of type
         string
